# reactv1

./: .gitignore  README.md  package-lock.json  package.json  start-servers.sh  stop-servers.sh
backend/: pyproject.toml  settings.json
backend/src/: __init__.py  ai_service.py  knowledge_base.py  main.py  socrates_system.py
src/: App.js  index.js
src/components/: SocratesChat.js
